--- a/Projects/HelloWorld/package.json
+++ b/Projects/HelloWorld/package.json
@@ -4,8 +4,10 @@
   "description": "**Student:** [Joe Youn]  \r **Student ID:** [70542227]  \r **Semester:** [Fall/2025]",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node app.js",
+  "dev": "nodemon app.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/younj1/CSC330Younj1.git"
